refactor: extract ProjectHistoryStore, ScanPipelineRunner, ContextServerLauncher to ui.coordinator